Day3/wordpress-and-mariadb/16-wordpress-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
  labels:
    app: wordpress
  annotations:
    # Sticky sessions help admin sessions and some plugins behave across pods.
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: "false"
spec:
  to:
    kind: Service
    name: wordpress
  port:
    targetPort: http
